samples/_failures_safe/1761522983_105ffd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b19e1810.c: In function ‘main’:
./samples/SAFE/__tmp_b19e1810.c:135:9: error: expected expression at end of input
  135 |         input_buffer[
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_b19e1810.c:135:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b19e1810.c:135:9: error: expected declaration or statement at end of input
